[tool.poetry]
name = "bpylist2"
version = "4.1.1"
description = "Parse and generate NSKeyedArchiver archives"
authors = ["Jenia Varavva <fuzzy.parabola@gmail.com>"]
license = "MIT"
readme = "README.rst"

[tool.poetry.dependencies]
python = "^3.7"

[tool.poetry.urls]
homepage = "https://github.com/parabolala/bpylist2"

[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-pylint = "^0.19.0"
pytest-mypy = "^0.10.3"
pytest-pycodestyle = "^2.3.1"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.7.0"
ruff = "^0.4.8"
black = "^23.11.0"
mypy = "^1.6.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
